--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "colyseus": "^0.14.23",
+    "colyseus.js": "^0.14.13",
     "compression": "^1.7.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
