--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "history": "^4.9.0",
+    "iframe-resizer-react": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
