--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@colyseus/command": "^0.2.1",
     "@monaco-editor/react": "^4.3.1",
     "bcrypt": "^5.0.0",
+    "chart.js": "^3.7.1",
     "colyseus": "^0.14.23",
     "colyseus.js": "^0.14.13",
     "compression": "^1.7.3",
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-chartjs-2": "^4.0.1",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
