--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
     "react-chartjs-2": "^4.0.1",
+    "react-simple-typewriter": "^3.0.1",
+    "react-typewriter-effect": "^1.1.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
