--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.5.1",
     "react-chartjs-2": "^4.0.1",
     "react-simple-typewriter": "^3.0.1",
+    "react-toastify": "^8.2.0",
     "react-typewriter-effect": "^1.1.0",
     "sequelize": "^6.3.5"
   },
